<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.redcastlemedia.multitallented</groupId>
    <artifactId>civs</artifactId>
    <version>1.11.5</version>

    <properties>
        <maven.compiler.source>16</maven.compiler.source>
        <maven.compiler.target>16</maven.compiler.target>
        <github.global.server>github</github.global.server>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <!--Bungeecord Repo-->
        <!--Only include if using the Spigot API dependency-->
        <repository>
            <id>bungeecord-repo</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
        <repository>
            <id>herocraft</id> <!-- Vault Repo -->
            <url>https://nexus.hc.to/content/repositories/pub_releases/</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>Scarsz-Nexus</id>
            <url>https://nexus.scarsz.me/content/groups/public/</url>
        </repository>
        <repository>
            <id>dynmap</id>
            <url>https://repo.mikeprimm.com/</url>
        </repository>
        <repository>
            <id>janmm14-public</id>
            <url>https://repo.janmm14.de/repository/public/</url>
        </repository>
        <repository>
            <id>reflex.public</id>
            <name>Public Reflex Repository</name>
            <url>https://archiva.reflex.rip/repository/public/</url>
        </repository>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
<!--        <repository>-->
<!--            <id>enginehub-maven</id>-->
<!--            <url>https://maven.enginehub.org/repo/</url>-->
<!--        </repository>-->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>phoenix</id>
            <url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
        </repository>
        <repository>
            <id>Modrinth</id>
            <url>https://api.modrinth.com/maven</url>
        </repository>
    </repositories>

    <dependencies>

        <dependency>
            <groupId>org.reflections</groupId>
            <artifactId>reflections</artifactId>
            <version>0.9.12</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.10.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.10.19</version>
            <scope>test</scope>
        </dependency>


        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.dynmap</groupId>
            <artifactId>dynmap-api</artifactId>
            <version>2.0</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>net.Indyuce</groupId>
            <artifactId>MMOItems-API</artifactId>
            <version>6.9.4-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>io.lumine</groupId>
            <artifactId>MythicLib-dist</artifactId>
            <version>1.6.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.NeumimTo</groupId>
            <artifactId>SpartanAPI</artifactId>
            <version>6033d44eba</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.Olexorus</groupId>
            <artifactId>WitherAC</artifactId>
            <version>0a45a67bee</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.Updated-NoCheatPlus.NoCheatPlus</groupId>
            <artifactId>nocheatplus</artifactId>
            <version>v1.5</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>rip.reflex</groupId>
            <artifactId>ReflexAPI</artifactId>
            <scope>provided</scope>
            <version>7</version>
        </dependency>

        <dependency>
            <groupId>de.janmm14</groupId>
            <artifactId>aac-api</artifactId>
            <version>4.2.0</version>
            <scope>provided</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>AntiAuraAPI</groupId>-->
<!--            <artifactId>API</artifactId>-->
<!--            <version>0.0.1</version>-->
<!--            <scope>system</scope>-->
<!--            <systemPath>${basedir}/lib/AAAPI.jar</systemPath>-->
<!--        </dependency> -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-api</artifactId>
            <version>4.11.0</version>
            <scope>compile</scope>
        </dependency>

        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>4.11.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-platform-bukkit</artifactId>
            <version>4.1.2</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.discordsrv</groupId>
            <artifactId>discordsrv</artifactId>
            <version>1.19.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.3.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>maven.modrinth</groupId>
            <artifactId>pl3xmap</artifactId>
            <version>1.20.4-484</version>
            <scope>provided</scope>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>net.pl3x.map</groupId>-->
<!--            <artifactId>pl3xmap-api</artifactId>-->
<!--            <version>1.0.0-SNAPSHOT</version>-->
<!--            <scope>provided</scope>-->
<!--        </dependency>-->
    </dependencies>
    <pluginRepositories>
        <pluginRepository>
            <id>maven-snapshots</id>
            <url>https://repository.apache.org/content/repositories/snapshots/</url>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>internal.repo</id>
            <name>Temporary Staging Repository</name>
            <url>file://${project.build.directory}/mvn-repo</url>
        </repository>
    </distributionManagement>
    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/java</directory>
                <includes>
                    <include>plugin.yml</include>
                    <include>resources/**</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>com.github.github</groupId>
                <artifactId>site-maven-plugin</artifactId>
                <version>0.11</version>
                <configuration>
                    <message>Maven artifacts for ${project.version}</message> <!-- git commit message -->
                    <noJekyll>true</noJekyll>  <!-- disable webpage processing -->
                    <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
                    <branch>refs/heads/mvn-repo</branch> <!-- remote branch name -->
                    <includes><include>**/*</include></includes>
                    <repositoryName>Civs</repositoryName> <!-- github repo name -->
                    <repositoryOwner>Multitallented</repositoryOwner> <!-- organization or user name  -->
                </configuration>
                <executions> <!-- run site-maven-plugin's 'site' target as part of the build's normal 'deploy' phase -->
                    <execution>
                        <goals>
                            <goal>site</goal>
                        </goals>
                        <phase>deploy</phase>
                    </execution>
                </executions>
            </plugin>
<!--            <plugin>-->
<!--                <artifactId>maven-deploy-plugin</artifactId>-->
<!--                <version>2.8.2</version>-->
<!--                <configuration>-->
<!--                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>-->
<!--                </configuration>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.logging/java.util.logging=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <shadedArtifactAttached>false</shadedArtifactAttached>
                    <artifactSet>
                        <includes>
                            <include>*:*</include>
                        </includes>
                    </artifactSet>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                        </filter>
                    </filters>
                    <relocations>
                        <relocation>
                            <pattern>org.reflections</pattern>
                            <shadedPattern>shaded.org.reflections</shadedPattern>
                            <includes>
                                <include>org.reflections.**</include>
                            </includes>
                        </relocation>
                        <!-- Should be safe to drop on 1.17-->
                        <relocation>
                            <pattern>net.kyori</pattern>
                            <shadedPattern>civs.net.kyori</shadedPattern>
                        </relocation>

                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                    <configuration>
                        <appendAssemblyId>false</appendAssemblyId>
                        <descriptors>
                        <descriptor>src/assembly/zip.xml</descriptor>
                        </descriptors>
                    </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
